Add navbar, product list, and footer

--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>UBC Bookstore</title>
-  </head>
-  <body>
-		<div id="header">
-			<img id="logo" src="./Images/bookstore.jpg" height="256" width="364">
-			<h1>UBC BOOKSTORE</h1>
-		</div>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <title>UBC Bookstore</title>
+    </head>
+    <body>
+        <div id="header">
+            <img id="logo" src="./Images/bookstore.jpg" height="256" width="364">
+            <h1>UBC BOOKSTORE</h1>
+        </div>
+
+        <div id="mainContent">
+            <ul id="navigationMenu">
+                <li><a>All Items</a></li>
+                <li><a>Books</a></li>
+                <li><a>Clothing</a></li>
+                <li><a>Tech</a></li>
+                <li><a>Gifts</a></li>
+                <li><a>Stationary</a></li>
+                <li><a>Supplies</a></li>
+            </ul>
+            <div id="productList">
+                <div class="product">
+                    <img src="./Images/bookstore.jpg" height="150" width="150">
+                    <span>Product Name</span>
+                </div>
+            </div>
+        </div>
+        <div id="footer">
+            Contact Information.
+        </div>
+    </body>
 </html>
