Styled welcome banner and nav menu

--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html>
     <head>
         <meta charset="UTF-8">
+				<link rel="stylesheet" href="./CSS/style.css">
         <title>UBC Bookstore</title>
     </head>
     <body>
         <div id="header">
-            <img id="logo" src="./Images/bookstore.jpg" height="256" width="364">
-            <h1>UBC BOOKSTORE</h1>
+            <img id="logo" src="./Images/bookstore.jpg">
+            <img id="banner" src="./Images/welcomebanner.jpg">
         </div>
 
         <div id="mainContent">
             <ul id="navigationMenu">
-                <li><a>All Items</a></li>
-                <li><a>Books</a></li>
-                <li><a>Clothing</a></li>
-                <li><a>Tech</a></li>
-                <li><a>Gifts</a></li>
-                <li><a>Stationary</a></li>
-                <li><a>Supplies</a></li>
+                <li>All Items</li>
+                <li>Books</li>
+                <li>Clothing</li>
+                <li>Tech</li>
+                <li>Gifts</li>
+                <li>Stationary</li>
+                <li>Supplies</li>
             </ul>
             <div id="productList">
                 <div class="product">
