Centered page with width 1000px

--- a/index.html
+++ b/index.html
@@ -6,30 +6,32 @@
         <title>UBC Bookstore</title>
     </head>
     <body>
-        <div id="header">
-            <img id="logo" src="./Images/bookstore.jpg">
-            <img id="banner" src="./Images/welcomebanner.jpg">
-        </div>
+        <div id="page">
+            <div id="header">
+                <img id="logo" src="./Images/bookstore.jpg">
+                <img id="banner" src="./Images/welcomebanner.jpg">
+            </div>
 
-        <div id="mainContent">
-            <ul id="navigationMenu">
-                <li>All Items</li>
-                <li>Books</li>
-                <li>Clothing</li>
-                <li>Tech</li>
-                <li>Gifts</li>
-                <li>Stationary</li>
-                <li>Supplies</li>
-            </ul>
-            <div id="productList">
-                <div class="product">
-                    <img src="./Images/bookstore.jpg" height="150" width="150">
-                    <span>Product Name</span>
+            <div id="mainContent">
+                <ul id="navigationMenu">
+                    <li>All Items</li>
+                    <li>Books</li>
+                    <li>Clothing</li>
+                    <li>Tech</li>
+                    <li>Gifts</li>
+                    <li>Stationary</li>
+                    <li>Supplies</li>
+                </ul>
+                <div id="productList">
+                    <div class="product">
+                        <img src="./Images/bookstore.jpg" height="150" width="150">
+                        <span>Product Name</span>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div id="footer">
-            Contact Information.
+            <div id="footer">
+                Contact Information.
+            </div>
         </div>
     </body>
 </html>
