Styled product list

--- a/index.html
+++ b/index.html
@@ -25,7 +25,27 @@
                 <div id="productList">
                     <div class="product">
                         <img src="./Images/bookstore.jpg" height="150" width="150">
-                        <span>Product Name</span>
+                        <div>Product Name</div>
+                    </div>
+                    <div class="product">
+                        <img src="./Images/bookstore.jpg" height="150" width="150">
+                        <div>Product Name</div>
+                    </div>
+                    <div class="product">
+                        <img src="./Images/bookstore.jpg" height="150" width="150">
+                        <div>Product Name</div>
+                    </div>
+                    <div class="product">
+                        <img src="./Images/bookstore.jpg" height="150" width="150">
+                        <div>Product Name</div>
+                    </div>
+                    <div class="product">
+                        <img src="./Images/bookstore.jpg" height="150" width="150">
+                        <div>Product Name</div>
+                    </div>
+                    <div class="product">
+                        <img src="./Images/bookstore.jpg" height="150" width="150">
+                        <div>Product Name</div>
                     </div>
                 </div>
             </div>
