Styled product list

--- a/index.html
+++ b/index.html
@@ -24,28 +24,88 @@
                 </ul>
                 <div id="productList">
                     <div class="product">
-                        <img src="./Images/bookstore.jpg" height="150" width="150">
-                        <div>Product Name</div>
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
                     </div>
                     <div class="product">
-                        <img src="./Images/bookstore.jpg" height="150" width="150">
-                        <div>Product Name</div>
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
                     </div>
                     <div class="product">
-                        <img src="./Images/bookstore.jpg" height="150" width="150">
-                        <div>Product Name</div>
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
                     </div>
                     <div class="product">
-                        <img src="./Images/bookstore.jpg" height="150" width="150">
-                        <div>Product Name</div>
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
                     </div>
                     <div class="product">
-                        <img src="./Images/bookstore.jpg" height="150" width="150">
-                        <div>Product Name</div>
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
                     </div>
                     <div class="product">
-                        <img src="./Images/bookstore.jpg" height="150" width="150">
-                        <div>Product Name</div>
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
+                    </div>
+                    <div class="product">
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
+                    </div>
+                    <div class="product">
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
+                    </div>
+                    <div class="product">
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
+                    </div>
+                    <div class="product">
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
+                    </div>
+                    <div class="product">
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
+                    </div>
+                    <div class="product">
+                        <div class="productInfo">
+                            <img class="productImage" src="./Images/bookstore.jpg">
+                            <span class="productPrice">$100</span>
+                        </div>
+                        <span class="productName">Product Name</span>
                     </div>
                 </div>
             </div>
