--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div id="footer">
-            Contact Information.
+            <span>Contact Information.</span>
         </div>
     </body>
 </html>
