--- a/index.html
+++ b/index.html
@@ -24,87 +24,87 @@
             <div id="productList">
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
-                        <span class="productPrice">$100</span>
+                        <img class="productImage" src="./Images/Products/Box1_$10.png">
+                        <span class="productPrice">$10</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">Box 1</span>
                 </div>
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
-                        <span class="productPrice">$100</span>
+                        <img class="productImage" src="./Images/Products/Box2_$5.png">
+                        <span class="productPrice">$5</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">Box 2</span>
                 </div>
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
-                        <span class="productPrice">$100</span>
+                        <img class="productImage" src="./Images/Products/Clothes1_$20.png">
+                        <span class="productPrice">$20</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">Clothes 1</span>
                 </div>
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
-                        <span class="productPrice">$100</span>
+                        <img class="productImage" src="./Images/Products/Clothes2_$30.png">
+                        <span class="productPrice">$30</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">Clothes 2</span>
                 </div>
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
-                        <span class="productPrice">$100</span>
+                        <img class="productImage" src="./Images/Products/Jeans_$50.png">
+                        <span class="productPrice">$50</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">Jeans</span>
                 </div>
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
-                        <span class="productPrice">$100</span>
+                        <img class="productImage" src="./Images/Products/Keyboard_$20.png">
+                        <span class="productPrice">$20</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">Keyboard</span>
                 </div>
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
-                        <span class="productPrice">$100</span>
+                        <img class="productImage" src="./Images/Products/KeyboardCombo_$40.png">
+                        <span class="productPrice">$40</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">Keyboard Combo</span>
                 </div>
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
-                        <span class="productPrice">$100</span>
+                        <img class="productImage" src="./Images/Products/Mice_$20.png">
+                        <span class="productPrice">$20</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">Mice</span>
                 </div>
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
-                        <span class="productPrice">$100</span>
+                        <img class="productImage" src="./Images/Products/PC1_$350.png">
+                        <span class="productPrice">$350</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">PC 1</span>
                 </div>
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
-                        <span class="productPrice">$100</span>
+                        <img class="productImage" src="./Images/Products/PC2_$400.png">
+                        <span class="productPrice">$400</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">PC 2</span>
                 </div>
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
-                        <span class="productPrice">$100</span>
+                        <img class="productImage" src="./Images/Products/PC3_$300.png">
+                        <span class="productPrice">$300</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">PC 3</span>
                 </div>
                 <div class="product">
                     <div class="productInfo">
-                        <img class="productImage" src="./Images/bookstore.jpg">
+                        <img class="productImage" src="./Images/Products/Tent_$100.png">
                         <span class="productPrice">$100</span>
                     </div>
-                    <span class="productName">Product Name</span>
+                    <span class="productName">Tent</span>
                 </div>
             </div>
         </div>
