Fixed welcome banner id

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="header">
             <img id="logo" src="./Images/bookstore.jpg">
-            <img id="banner" src="./Images/welcomebanner.jpg">
+            <img id="welcomeBanner" src="./Images/welcomebanner.jpg">
         </div>
 
         <div id="mainContent">
