Add cart variables; implement add and remove from cart

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
             <link rel="stylesheet" href="./CSS/style.css">
+            <script type="text/javascript" src="./js/ShoppingCart.js"></script>
         <title>UBC Bookstore</title>
     </head>
     <body>
