Implement show cart button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             <img id="welcomeBanner" src="./Images/welcomebanner.jpg">
         </div>
 
+        <div class="showCartButtonContainer" onclick="showCart()">
+            <button id="showCartButton" type="button">Show Cart</button>
+        </div>
+
         <div id="mainContent">
             <ul id="navigationMenu">
                 <li>All Items</li>
