Refactor show cart button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <img id="welcomeBanner" src="./Images/welcomebanner.jpg">
         </div>
 
-        <div class="showCartButtonContainer" onclick="showCart()">
-            <button id="showCartButton" type="button">Show Cart</button>
+        <div class="showCartButtonContainer">
+            <button id="showCartButton" onclick="showCart()">Show Cart</button>
         </div>
 
         <div id="mainContent">
