Fixed with 1 setInterval
Fixed with 1 setInterval

Wrapped setInterval in its own method

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <script type="text/javascript" src="./js/ShoppingCart.js"></script>
         <title>UBC Bookstore</title>
     </head>
-    <body onload="setInterval(incrementTimer, 1000)">
+    <body onload="setInactiveInterval()">
         <div id="header">
             <img id="logo" src="./Images/bookstore.jpg">
             <img id="welcomeBanner" src="./Images/welcomebanner.jpg">
