--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <script type="text/javascript" src="./js/ShoppingCart.js"></script>
         <title>UBC Bookstore</title>
     </head>
-    <body>
+    <body onload="setInterval(incrementTimer, 1000)">
         <div id="header">
             <img id="logo" src="./Images/bookstore.jpg">
             <img id="welcomeBanner" src="./Images/welcomebanner.jpg">
