--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="showCartButtonContainer">
-            <button id="showCartButton" onclick="showCart()">Show Cart</button>
+            <button id="showCartButton" onclick="showCart()">Cart ($0)</button>
         </div>
 
         <div id="mainContent">
