Add inactive timer in footer

--- a/index.html
+++ b/index.html
@@ -173,8 +173,9 @@
                 </div>
             </div>
         </div>
-        <div id="footer">
+        <span id="footer">
             <span>Contact Information.</span>
-        </div>
+            <span id="inactiveTimer">0</span>
+        </span>
     </body>
 </html>
