Create product list at page load

--- a/index.html
+++ b/index.html
@@ -26,152 +26,7 @@
                 <li>Stationary</li>
                 <li>Supplies</li>
             </ul>
-            <div id="productList">
-                <div class="product" id="Box1">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/Box1_$10.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('Box1')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('Box1')">Remove</button>
-                        </span>
-                        <span class="productPrice">$10</span>
-                    </div>
-                    <span class="productName">Box 1</span>
-                </div>
-                <div class="product" id="Box2">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/Box2_$5.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('Box2')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('Box2')">Remove</button>
-                        </span>
-                        <span class="productPrice">$5</span>
-                    </div>
-                    <span class="productName">Box 2</span>
-                </div>
-                <div class="product" id="Clothes1">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/Clothes1_$20.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('Clothes1')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('Clothes1')">Remove</button>
-                        </span>
-                        <span class="productPrice">$20</span>
-                    </div>
-                    <span class="productName">Clothes 1</span>
-                </div>
-                <div class="product" id="Clothes2">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/Clothes2_$30.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('Clothes2')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('Clothes2')">Remove</button>
-                        </span>
-                        <span class="productPrice">$30</span>
-                    </div>
-                    <span class="productName">Clothes 2</span>
-                </div>
-                <div class="product" id="Jeans">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/Jeans_$50.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('Jeans')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('Jeans')">Remove</button>
-                        </span>
-                        <span class="productPrice">$50</span>
-                    </div>
-                    <span class="productName">Jeans</span>
-                </div>
-                <div class="product" id="Keyboard">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/Keyboard_$20.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('Keyboard')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('Keyboard')">Remove</button>
-                        </span>
-                        <span class="productPrice">$20</span>
-                    </div>
-                    <span class="productName">Keyboard</span>
-                </div>
-                <div class="product" id="KeyboardCombo">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/KeyboardCombo_$40.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('KeyboardCombo')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('KeyboardCombo')">Remove</button>
-                        </span>
-                        <span class="productPrice">$40</span>
-                    </div>
-                    <span class="productName">Keyboard Combo</span>
-                </div>
-                <div class="product" id="Mice">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/Mice_$20.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('Mice')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('Mice')">Remove</button>
-                        </span>
-                        <span class="productPrice">$20</span>
-                    </div>
-                    <span class="productName">Mice</span>
-                </div>
-                <div class="product" id="PC1">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/PC1_$350.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('PC1')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('PC1')">Remove</button>
-                        </span>
-                        <span class="productPrice">$350</span>
-                    </div>
-                    <span class="productName">PC 1</span>
-                </div>
-                <div class="product" id="PC2">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/PC2_$400.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('PC2')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('PC2')">Remove</button>
-                        </span>
-                        <span class="productPrice">$400</span>
-                    </div>
-                    <span class="productName">PC 2</span>
-                </div>
-                <div class="product" id="PC3">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/PC3_$300.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('PC3')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('PC3')">Remove</button>
-                        </span>
-                        <span class="productPrice">$300</span>
-                    </div>
-                    <span class="productName">PC 3</span>
-                </div>
-                <div class="product" id="Tent">
-                    <div class="productInfo">
-                        <img class="productImage" src="./Images/Products/Tent_$100.png">
-                        <img class="cartOverlay" src="./Images/cart.png">
-                        <span class="cartButtons">
-                            <button class="addButton" onclick="addToCart('Tent')">Add</button>
-                            <button class="removeButton" onclick="removeFromCart('Tent')">Remove</button>
-                        </span>
-                        <span class="productPrice">$100</span>
-                    </div>
-                    <span class="productName">Tent</span>
-                </div>
-            </div>
+            <div id="productList"></div>
         </div>
         <span id="footer">
             <span>Contact Information.</span>
