Refactor event listener for checkout button

--- a/Client/index.html
+++ b/Client/index.html
@@ -39,7 +39,7 @@
                     <h3>Shopping Cart</h3>
                     <div id="cart-items"></div>
                     <div class="checkoutButtonContainer">
-                        <button id="checkoutButton" onclick="getUpdatedProducts()">CHECKOUT</button>
+                        <button id="checkoutButton">CHECKOUT</button>
                     </div>
                 </div>
             </div>
